# tellicoczdatasource

./: .gitignore  ProjectHome.md  search_databazeknih.sh
csfd/: csfd_search.pl
databazeknih/: README.md  databazeknih_search.pl  databazeknih_search.py  databazeknih_search_my.pl  databazeknih_search_my.py  my_fields.json  pyproject.toml  requirements.txt
kosmas/: kosmas_search.pl  kosmas_search_my.pl
trunk/csfd/: csfd_search.pl
trunk/databazeknih/: databazeknih_search.pl
trunk/kosmas/: kosmas_search.pl  kosmas_search_my.pl
